<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">LetUsGo</string>

    <string-array name="toolbox_array">
        <item>活动</item>
        <item>我的信息</item>
        <item>设置</item>
        <item>关于</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_openmap">Open map</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <!-- 提示文字 -->
    <string name="msg_loginfail">登录失败</string>
    <!-- 界面文字 -->
    <string name="login_getpassword">找回密码</string>
    <string name="login_username">账户</string>
    <string name="login_password">密码</string>
    <string name="login_nickname">昵称</string>
    <string name="login_register">注册</string>
    <string name="login_submit">登录</string>
    <string name="viewpager_title_userinfo">我的信息</string>
    <string name="viewpager_title_actievent">活动信息</string>
    <string name="login_submit_account_title">用Let us go账号登陆</string>
    <string name="login_register_account_title">注册Let us go账号</string>
    <!-- toogle button 设置中文字 -->
    <string name="common_state_on">ON</string>
    <string name="common_state_off">OFF</string>
    <string name="common_new_function_tip" translatable="false">New</string>

</resources>